Fri Mar 14 15:49:05 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_LIB_PREFIX): use libdir.

Fri Mar 14 10:12:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_VARTYPE): should not indent preprocessor
	  directives.

Thu Mar 13 00:37:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_call0): yields the last executed node line number at
	  return event.  [ruby-core:15855]

Wed Mar 12 02:12:20 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/delegate.rb: check $@ to avoid NoMethodError.

Tue Mar 11 19:48:09 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (fix_coerce): try conversion before type check.
	  [ruby-core:15838]

Tue Mar 11 17:03:23 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (Delegator#initialize, DelegateClass): skip correct
	  backtrace.  [ruby-dev:34019]

Tue Mar 11 16:43:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_cmdvector): terminate shrunken command line.

Tue Mar 11 12:39:03 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (clean-local): removes MINOBJS.

Sat Mar  8 18:50:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (isdirsep): backslash is valid path separator on cygwin too.

Fri Mar  7 19:56:10 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb: rdoc added.  [ruby-Patches-9762]

Thu Mar  6 15:10:21 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* {bcc32,win32}/Makefile.sub (RUNRUBY): use $(PROGRAM) instead of
	  ruby$(EXEEXT).
	  suggested by KIMURA Koichi <kimura.koichi at canon.co.jp>.
	  [ruby-dev:34000]

Thu Mar  6 12:15:06 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (opt_block_param): command can start just after block param
	  definition.  [ruby-list:44479]

Thu Mar  6 00:34:11 2008  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb: update RDoc. Thanks Makoto Kuwata [ruby-dev:33702]

Mon Mar  3 23:28:34 2008  GOTOU Yuuzou  <gotoyuzo@notwork.org>
